iptables/vps-rules/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Jun 14 21:22:25 2026
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [69132:15946565]
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 51822 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT
-A INPUT -j DROP
-A INPUT -s 10.30.0.0/24 -p tcp -m tcp --dport 8444 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8444 -j ACCEPT
COMMIT
# Completed on Sun Jun 14 21:22:25 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Jun 14 21:22:25 2026
*nat
:PREROUTING ACCEPT [4514:225891]
:INPUT ACCEPT [199:10991]
:OUTPUT ACCEPT [753:46023]
:POSTROUTING ACCEPT [684:41064]
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.30.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Sun Jun 14 21:22:25 2026
